load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# c_oracle: vendored real-Postgres bodies (renamed via preprocessor)
# + setjmp wrapper. The base `float_to_int.c` source is included by
# `renamed_float_to_int.c` via #include, so it's a textual header.
cc_library(
    name = "c_oracle",
    srcs = [
        "c_oracle/renamed_float_to_int.c",
        "c_oracle/wrappers.c",
    ],
    textual_hdrs = ["c_oracle/float_to_int.c"],
    deps = ["//rust/pg_fcinfo:ereport_hdr"],
)

rust_library(
    name = "pg_float_to_int",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = ["//rust/pg_fcinfo"],
)

rust_test(
    name = "diff_float_to_int",
    srcs = ["tests/diff_float_to_int.rs"],
    edition = "2021",
    deps = [
        ":c_oracle",
        ":pg_float_to_int",
        "//rust/pg_fcinfo",
        "@crates//:proptest",
    ],
)

filegroup(
    name = "lib_rs",
    srcs = ["src/lib.rs"],
)
