load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# c_oracle: vendored real-Postgres bodies (renamed via preprocessor)
# + setjmp wrapper. The base `interval.c` source is included by
# `renamed_interval.c` via #include, so it's a textual header.
cc_library(
    name = "c_oracle",
    srcs = [
        "c_oracle/renamed_interval.c",
        "c_oracle/wrappers.c",
    ],
    textual_hdrs = ["c_oracle/interval.c"],
    deps = ["//rust/pg_fcinfo:ereport_hdr",
        "//rust/pg_palloc:palloc_hdr",],
)

rust_library(
    name = "pg_interval",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = ["//rust/pg_fcinfo",
        "//rust/pg_palloc",],
)

rust_test(
    name = "diff_interval",
    srcs = ["tests/diff_interval.rs"],
    edition = "2021",
    deps = [
        ":c_oracle",
        ":pg_interval",
        "//rust/pg_fcinfo",
        "@crates//:proptest",
        "//rust/pg_palloc",
    ],
)

filegroup(
    name = "lib_rs",
    srcs = ["src/lib.rs"],
)
