load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

# No diff_test (no tests/diff_*.rs exists for this cluster yet).
# c_oracle + rust_library still wired so a future diff_test can
# drop in without further infrastructure changes.
cc_library(
    name = "c_oracle",
    srcs = [
        "c_oracle/timestamp_arith.c",
        "c_oracle/wrappers.c",
    ],
    deps = ["//rust/pg_fcinfo:ereport_hdr"],
)

rust_library(
    name = "pg_timestamp_arith",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = ["//rust/pg_fcinfo",
        "//rust/pg_palloc",],
)

filegroup(
    name = "lib_rs",
    srcs = ["src/lib.rs"],
)
