load(
    "//tools/regen:cluster.bzl",
    "gate1_test_labels",
    "gate2_test_labels",
    "gate3_test_labels",
)
load("//tools/regen:clusters.bzl", "CLUSTERS")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["regen-*.sh"]))

# ─── Gate 1 — regen idempotence ────────────────────────────────────
#
# Bazel-native via `lean_emit` + skylib `diff_test` per cluster, wired
# in //lean:BUILD.bazel via `wire_all_gate1(CLUSTERS)`. This test_suite
# aggregates all 22 of them (19 Rust emits + 3 C emits for clusters
# that have one) by iterating the same CLUSTERS list.
test_suite(
    name = "gate1_all",
    tests = gate1_test_labels(CLUSTERS),
)

# ─── Gate 2 — cluster behavioral diff-test ─────────────────────────
#
# Bazel-native via rules_rust + cc_library per cluster, wired by the
# `pg_ir_cluster()` macro from each //rust/pg_<crate>/BUILD.bazel.
# This test_suite picks up every cluster with a `tests/diff_*.rs`
# harness plus pg_fcinfo's round_trip test.
test_suite(
    name = "gate2_all",
    tests = gate2_test_labels(CLUSTERS),
)

# ─── Gate 3 — clang AST structural diff vs real Postgres ──────────
#
# Bazel-native via rules_lang's `c_ast_dump_single` + `c_ast_struct_diff_test`,
# wired by the `pg_ir_cluster()` macro for clusters with `lean_emit_c =
# True` and a `pg_source` label. Only macaddr/tid/uuid qualify today.
test_suite(
    name = "gate3_all",
    tests = gate3_test_labels(CLUSTERS),
)

# Convenience: run all three gates as a single test_suite handle.
test_suite(
    name = "gates_all",
    tests = [
        ":gate1_all",
        ":gate2_all",
        ":gate3_all",
    ],
)
